# gendo

./: .gitignore  Makefile  README.md  gendo.yml  gendock  pyproject.toml
gendo/: CiGen.py  Generator.py
templates/: ci.j2  nginx.j2
templates/ansible/: deploy.j2  group_vars.j2  hosts.j2
templates/compose/: angular.j2  java.j2  next.j2  python.j2  react.j2  universal.j2
templates/dockerfiles/: angular.j2  java.j2  javascript.j2  next.j2  python.j2  react.j2  ssr.j2  universal.j2
